# platform.core.convergence.plugin.service-plugin-sample

./: CMakeLists.txt  README  org.tizen.service-plugin-sample.manifest  org.tizen.service-plugin-sample.rule  org.tizen.service-plugin-sample.xml
auth-plugin/: CMakeLists.txt  auth-plugin-sample-log.h  auth-plugin-sample.c
include/: service_plugin_sample.h
packaging/: org.tizen.service-plugin-sample.spec
src/: service_plugin_sample.c
storage-plugin/: CMakeLists.txt  storage-plugin-sample-log.h  storage-plugin-sample.c
