CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
PROJECT(service-plugin-sample)

SET(SERVICE-PLUGIN-SAMPLE org.tizen.service-plugin-sample)
SET(SERVICE-PLUGIN-SAMPLE-BIN service-plugin-sample)

SET(SRCS
	src/service_plugin_sample.c
)

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}
${CMAKE_CURRENT_SOURCE_DIR}/include/
)

ADD_SUBDIRECTORY(auth-plugin)
ADD_SUBDIRECTORY(storage-plugin)

INCLUDE(FindPkgConfig)
pkg_check_modules(pkgs REQUIRED
	appcore-agent
	aul
	eina
	ecore
	dlog
	service-adaptor
	capi-appfw-service-application
)

FOREACH(flag ${pkgs_CFLAGS})
	SET(EXTRA_CFLAGS "${EXTRA_CFLAGS} ${flag} -fpie")
ENDFOREACH(flag)

SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${EXTRA_CFLAGS}")

ADD_DEFINITIONS("-DSERVICE_ADAPTOR_DEBUGGING")
ADD_DEFINITIONS("-D_SERVICE_ADAPTOR_IPC_CLIENT")

ADD_EXECUTABLE(${SERVICE-PLUGIN-SAMPLE-BIN} ${SRCS})
TARGET_LINK_LIBRARIES(${SERVICE-PLUGIN-SAMPLE-BIN} ${pkgs_LDFLAGS} "-pie")
INSTALL(TARGETS ${SERVICE-PLUGIN-SAMPLE-BIN} DESTINATION /usr/apps/${SERVICE-PLUGIN-SAMPLE}/bin)

INSTALL(FILES ${CMAKE_SOURCE_DIR}/${SERVICE-PLUGIN-SAMPLE}.xml DESTINATION /usr/share/packages)
INSTALL(FILES ${CMAKE_SOURCE_DIR}/${SERVICE-PLUGIN-SAMPLE}.png DESTINATION /usr/share/icons/default/small)
